--- a/client/src/components/custom-button/custom-button.styles.scss
+++ b/client/src/components/custom-button/custom-button.styles.scss
@@ -4,13 +4,15 @@ $paragraph-font: 'Montserrat', sans-serif;
     background-color: #440404;
     color: #F8F5F5;
     border-radius: 4px;
-    width: 188px;
-    padding: 16px 32px;
+    font-size: 18px;
+    padding: 1.2em 2.5em;
     margin-top: 5px;
     font-family: $paragraph-font;
-    font-size: 18px;
     border: none;
 
+    @media screen and (max-width: 800px) {
+        font-size: 14px;
+    }
     &:hover {
         cursor: pointer;
     }
