--- a/client/src/components/form/form.styles.scss
+++ b/client/src/components/form/form.styles.scss
@@ -2,6 +2,8 @@ $heading-font: 'Cormorant', serif;
 $paragraph-font: 'Montserrat', sans-serif;
 $primary-color: rgb(68, 4, 4);
 $secondary-color: #8D5858;
+$paragraph-font-size: 16px;
+$paragraph-font-size-mobile: 14px;
 
 .alert_form {
     background-color: #F8F5F5;
@@ -9,10 +11,23 @@ $secondary-color: #8D5858;
     top: 20%;
     left: 35%;
     max-width: 500px;
+    margin-right: 40px;
     padding: 48px;
     box-shadow: -20px 20px 0px 0px rgb(239, 220, 220);
     border-left: 2px solid rgba(113, 3, 3, 0.25);
     border-bottom: 2px solid rgba(113, 3, 3, 0.25);
+
+    @media screen and (max-width: 800px) {
+        background-position: top 50% left 80%;
+        padding: 32px;
+        top: 25%;
+        left: 20%;
+        max-width: 400px;
+    }
+
+    @media screen and (max-width: 479px) {
+        left: 13%;
+    }
 }
 
 .form_heading {
@@ -20,26 +35,42 @@ $secondary-color: #8D5858;
     font-size: 52px;
     margin: 0px 0px 20px 0px;
     color: $primary-color;
+
+    @media screen and (max-width: 800px) {
+        font-size: 42px;
+        line-height: 1em;
+    }
 }
 
 .form_paragraph {
     font-family: $paragraph-font;
-    font-size: 14;
+    font-size: $paragraph-font-size;
     width: 90%;
     line-height: 1.25em;
     color: $secondary-color;
+
+    @media screen and (max-width: 800px) {
+        font-size: $paragraph-font-size-mobile;
+        line-height: 1.5em;
+    }
 }
 
 .form-input {
     background: none;
     background-color: #F5E9E9;
     font-size: 18px;
-    padding: 10px 10px 10px 10px;
+    padding: 10px;
     display: block;
     border: 1.5px solid #F8F5F5;
     width: 70%;
     border-radius: 4px;
     margin: 25px 0;
+
+    @media screen and (max-width: 800px) {
+        margin: 15px 0;
+        width: 80%;
+        font-size: $paragraph-font-size-mobile;
+    }
 
     &:focus {
       outline: none;
