Extended homepage background to 200vh, and changed the background

--- a/client/src/components/form/form.styles.scss
+++ b/client/src/components/form/form.styles.scss
@@ -8,12 +8,12 @@ $paragraph-font-size-mobile: 14px;
 .alert_form {
     background-color: #F8F5F5;
     position: absolute;
-    top: 20%;
+    top: 10%;
     left: 35%;
     max-width: 500px;
     margin-right: 40px;
     padding: 48px;
-    box-shadow: -20px 20px 0px 0px rgb(239, 220, 220);
+    box-shadow: -20px 20px 0px 0px #F3E4E4;
     border-left: 2px solid rgba(113, 3, 3, 0.25);
     border-bottom: 2px solid rgba(113, 3, 3, 0.25);
 
